# hive

./: .gitattributes  Cargo.toml  MEMORY.md  README.md
crates/hive/: Cargo.toml
crates/hive-summarizer/: Cargo.toml
crates/hive-summarizer/src/: lib.rs  main.rs
crates/hive/src/: agent_record.rs  codex_processor.rs  grok_processor.rs  main.rs  summarizer_client.rs  ui.rs
src/: agent_record.rs  codex_processor.rs  grok_processor.rs  main.rs  summarizer.rs  ui.rs
