[package]
name = "hive"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ratatui = { version = "0.27", features = ["crossterm"] }
crossterm = "0.28"
notify = "6"

[dev-dependencies]
tempfile = "3"
