[workspace]
members = ["crates/hive", "crates/hive-summarizer"]
resolver = "2"
default-members = ["crates/hive"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hive contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/hive"  # placeholder
description = "Observe and manage multiple AI coding agents by reading their on-disk session data."

# The root is a pure workspace manifest. Individual crates live under crates/.
# This structure allows us to keep the core `hive` binary lightweight while the
# heavy summarizer lives in its own independent executable (with its own deps).