[package]
name = "hive-summarizer"
version.workspace = true
edition.workspace = true

description = "Standalone companion binary for Hive that performs local text summarization using Candle + Falconsai/text_summarization (T5)."
readme = false

[dependencies]
# All the heavy ML dependencies live **only** in this crate.
# This keeps the main `hive` binary small and free of these transitive crates
# (rand/half MSRV issues, 240 MB model download, etc.).
candle-core = "0.5"
candle-nn = "0.5"
candle-transformers = "0.5"
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }

# For reliable model file downloads.
ureq = "2.12"

# Pins to help the resolver pick compatible rand 0.8 + older half + older gemm
# so that candle-core 0.5's CPU backend (f16/bf16 RNG sampling with rand_distr)
# builds reliably. Newer gemm (0.17+) and half (2.7+) pull rand 0.9 which
# is incompatible with the rand 0.8 that candle-core expects.
rand = "0.8"
rand_distr = "0.4"
half = "=2.4.1"
gemm = "0.15"

anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
# The real-model test lives here (it will be slow on first run because it
# downloads the ~240 MB weights and does CPU inference).
tempfile = "3"
