[package]
name = "hive"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.6", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ratatui = { version = "0.27", features = ["crossterm"] }
crossterm = "0.28"
notify = "6"

# Note: No heavy ML dependencies here. The summarization functionality lives
# in the separate `hive-summarizer` binary (see crates/hive-summarizer/).
# The client in summarizer_client.rs spawns it on demand.

[dev-dependencies]
tempfile = "3"